crates/pg_syntax/tests/snapshots/postgres_regress/numeric_big@341.snap
---
source: crates/pg_syntax/tests/pg_syntax_tests.rs
description: "INSERT INTO num_exp_div VALUES (7,9,'-14926769772.797708334489652004325241753714626257641081061212878627972973992233480868793527325656854681817156284203427388055525855608883067129036717726368707982450450575794623567027457808927082390474261155500697096284790656757163047499531247323702909360444831707029353441147768321257650234732286165724178549576948957405037843360446785505536809409054071975214796532504678683693402401018726571884721963641317944453797513145055081061680091585467186975354801535734149952115333241283186621720677488342266420359417174224757781125498130120775969091933838082305123652811689513300403051544682523761263183781206840940347226802620226164265210810994106136738030959199259066517106713585343004140573604437146025585149934286364795122716971496775012412420105368351774715982565252533025207453326002101655121126631180162560463548157187175671');"
---
InsertStmt@0..863
  Insert@0..6 "INSERT"
  Whitespace@6..7 " "
  Into@7..11 "INTO"
  Whitespace@11..12 " "
  RangeVar@12..23
    Ident@12..23 "num_exp_div"
  Whitespace@23..24 " "
  SelectStmt@24..861
    Values@24..30 "VALUES"
    Whitespace@30..31 " "
    Ascii40@31..32 "("
    List@32..861
      AConst@32..33
        Iconst@32..33 "7"
      Ascii44@33..34 ","
      AConst@34..35
        Iconst@34..35 "9"
      Ascii44@35..36 ","
      AConst@36..861
        Sconst@36..861 "'-14926769772.7977083 ..."
  Ascii41@861..862 ")"
  Ascii59@862..863 ";"

